--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,20 @@
   padding: 20px;
   width: 300px;
   height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.city-name {
+  font-size: 2rem;
+}
+
+.city-temp {
+  font-size: 3rem;
+}
+
+.city-weather {
+  font-size: 1.5rem;
 }
