--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,51 @@
-.box {
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
+
+.title {
+  padding: 1rem 0 1rem 0;
+  font-size: 1.9rem;
+  color: #ffffff;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+  font-weight: 700;
+  text-align: center;
+  background: #00bfff;
+}
+
+.weather-form {
+  margin-bottom: 2rem;
+}
+
+.weather-form input {
+  margin-bottom: 20px;
+}
+
+.weather-form input:focus {
+  border-color: #00bfff;
+}
+
+.error-message {
+  margin-bottom: 2px;
+  padding: 5px;
+  color: #f0146f;
+  font-style: italic;
+}
+
+.cards-row {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 0 10px 50px 10px;
+}
+
+.card {
+  position: relative;
   padding: 20px;
   width: 300px;
   height: 350px;
@@ -6,16 +53,68 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: #ffffff;
+  background: #00bfff;
+  border-radius: 3px;
+  box-shadow: none;
 }
 
-.city-name {
-  font-size: 2rem;
+.card-title {
+  font-size: 2.3rem;
+  font-weight: 600;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
-.city-temp {
+.card-temp {
   font-size: 3rem;
+  font-weight: 800;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
-.city-weather {
+.card-condition {
   font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.btn-delete {
+  position: absolute;
+  top: 12px;
+  right: 8px;
+  font-size: 1.2rem;
+  color: #ffffff;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+
+  font-weight: 400;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.control .btn-submit {
+  width: 100%;
+  background: #00bfff;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+.control .btn-submit i {
+  padding-top: 2 px;
+  margin-left: 10px;
+}
+
+.control .btn-submit:hover {
+  background: hsla(195, 100%, 50%, 0.897);
+}
+
+@media (max-width: 576px) {
+  .cards-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
