--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@ body {
   padding: 1rem 0 1rem 0;
   font-size: 1.9rem;
   color: #ffffff;
-  /* text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3); */
   font-weight: 700;
   text-align: center;
   background: #00bfff;
@@ -33,9 +32,13 @@ body {
 
 .error-message {
   margin-bottom: 2px;
-  padding: 5px;
-  color: #f0146f;
-  font-style: italic;
+  padding: 10px;
+  margin-bottom: 5px;
+  background-color: #f0146f;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  border-radius: 2px;
 }
 
 .cards-row {
