--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@ body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .title {
@@ -44,7 +44,7 @@ body {
 .cards-row {
   display: flex;
   flex-flow: row wrap;
-  padding: 0 10px 50px 10px;
+  padding: 0 10px 0px 10px;
 }
 
 .card {
